[package]
name = "past11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"
bitset-fixed = "0.1.0"
itertools = "0.9.0"
ordered-float = "1.0.2"
itertools-num = "0.1.3"
rand = { version = "0.7.3", features = ["small_rng"] }
permutohedron = "0.2.4"
proconio = "0.3.6"

[[bin]]
name = "b"
src  = "src/bin/b.rs"
